Add payment method to expenses

--- a/src/static/reports.html
+++ b/src/static/reports.html
@@ -150,6 +150,13 @@
                                     <label for="expense-description" class="form-label">Description</label>
                                     <input type="text" class="form-control" id="expense-description">
                                 </div>
+                                <div class="mb-3">
+                                    <label for="expense-method" class="form-label">Payment Method</label>
+                                    <select class="form-select" id="expense-method">
+                                        <option value="cash">Cash</option>
+                                        <option value="credit">Credit Card</option>
+                                    </select>
+                                </div>
                             </form>
                         </div>
                         <div class="modal-footer">
@@ -191,6 +198,13 @@
                                 <div class="mb-3">
                                     <label for="edit-expense-description" class="form-label">Description</label>
                                     <input type="text" class="form-control" id="edit-expense-description">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="edit-expense-method" class="form-label">Payment Method</label>
+                                    <select class="form-select" id="edit-expense-method">
+                                        <option value="cash">Cash</option>
+                                        <option value="credit">Credit Card</option>
+                                    </select>
                                 </div>
                             </form>
                         </div>
