--- a/src/static/dashboard.html
+++ b/src/static/dashboard.html
@@ -126,6 +126,7 @@
                                     <th>Date</th>
                                     <th>Category</th>
                                     <th>Description</th>
+                                    <th>Method</th>
                                     <th>Amount</th>
                                 </tr>
                             </thead>
@@ -184,6 +185,13 @@
                                     <label for="expense-description" class="form-label">Description</label>
                                     <input type="text" class="form-control" id="expense-description">
                                 </div>
+                                <div class="mb-3">
+                                    <label for="expense-method" class="form-label">Payment Method</label>
+                                    <select class="form-select" id="expense-method">
+                                        <option value="cash">Cash</option>
+                                        <option value="credit">Credit Card</option>
+                                    </select>
+                                </div>
                             </form>
                         </div>
                         <div class="modal-footer">
@@ -225,6 +233,13 @@
                                 <div class="mb-3">
                                     <label for="edit-expense-description" class="form-label">Description</label>
                                     <input type="text" class="form-control" id="edit-expense-description">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="edit-expense-method" class="form-label">Payment Method</label>
+                                    <select class="form-select" id="edit-expense-method">
+                                        <option value="cash">Cash</option>
+                                        <option value="credit">Credit Card</option>
+                                    </select>
                                 </div>
                             </form>
                         </div>
