--- a/src/static/expenses.html
+++ b/src/static/expenses.html
@@ -77,6 +77,14 @@
                                                     <!-- Categories will be loaded here -->
                                                 </select>
                                             </div>
+                                            <div class="col-md-3">
+                                                <label for="expense-method-filter" class="form-label">Method</label>
+                                                <select class="form-select" id="expense-method-filter">
+                                                    <option value="">All</option>
+                                                    <option value="cash">Cash</option>
+                                                    <option value="credit">Credit Card</option>
+                                                </select>
+                                            </div>
                                             <div class="col-md-4 d-none" id="custom-date-range">
                                                 <div class="row">
                                                     <div class="col-md-6">
@@ -110,6 +118,7 @@
                                                         <th>Date</th>
                                                         <th>Category</th>
                                                         <th>Description</th>
+                                                        <th>Method</th>
                                                         <th>Amount</th>
                                                         <th>Actions</th>
                                                     </tr>
@@ -160,6 +169,13 @@
                                     <label for="expense-description" class="form-label">Description</label>
                                     <input type="text" class="form-control" id="expense-description">
                                 </div>
+                                <div class="mb-3">
+                                    <label for="expense-method" class="form-label">Payment Method</label>
+                                    <select class="form-select" id="expense-method">
+                                        <option value="cash">Cash</option>
+                                        <option value="credit">Credit Card</option>
+                                    </select>
+                                </div>
                             </form>
                         </div>
                         <div class="modal-footer">
@@ -201,6 +217,13 @@
                                 <div class="mb-3">
                                     <label for="edit-expense-description" class="form-label">Description</label>
                                     <input type="text" class="form-control" id="edit-expense-description">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="edit-expense-method" class="form-label">Payment Method</label>
+                                    <select class="form-select" id="edit-expense-method">
+                                        <option value="cash">Cash</option>
+                                        <option value="credit">Credit Card</option>
+                                    </select>
                                 </div>
                             </form>
                         </div>
