--- a/src/static/reports.html
+++ b/src/static/reports.html
@@ -20,10 +20,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="/dashboard">Dashboard</a></li>
-                <li class="nav-item"><a class="nav-link" href="/expenses">Expenses</a></li>
-                <li class="nav-item"><a class="nav-link" href="/budgets">Budgets</a></li>
-                <li class="nav-item"><a class="nav-link" href="/reports">Reports</a></li>
+                <li class="nav-item"><a class="nav-link" data-page="dashboard" href="/dashboard">Dashboard</a></li>
+                <li class="nav-item"><a class="nav-link" data-page="expenses" href="/expenses">Expenses</a></li>
+                <li class="nav-item"><a class="nav-link" data-page="budgets" href="/budgets">Budgets</a></li>
+                <li class="nav-item"><a class="nav-link" data-page="reports" href="/reports">Reports</a></li>
             </ul>
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item dropdown">
