--- a/src/static/budgets.html
+++ b/src/static/budgets.html
@@ -22,6 +22,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" data-page="dashboard" href="/dashboard">Dashboard</a></li>
                 <li class="nav-item"><a class="nav-link" data-page="expenses" href="/expenses">Expenses</a></li>
+                <li class="nav-item"><a class="nav-link" data-page="incomes" href="/incomes">Incomes</a></li>
                 <li class="nav-item"><a class="nav-link" data-page="budgets" href="/budgets">Budgets</a></li>
                 <li class="nav-item"><a class="nav-link" data-page="reports" href="/reports">Reports</a></li>
             </ul>
