--- a/src/static/profile.html
+++ b/src/static/profile.html
@@ -22,6 +22,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="/dashboard">Dashboard</a></li>
                 <li class="nav-item"><a class="nav-link" href="/expenses">Expenses</a></li>
+                <li class="nav-item"><a class="nav-link" href="/incomes">Incomes</a></li>
                 <li class="nav-item"><a class="nav-link" href="/budgets">Budgets</a></li>
                 <li class="nav-item"><a class="nav-link" href="/reports">Reports</a></li>
             </ul>
