--- a/src/static/profile.html
+++ b/src/static/profile.html
@@ -7,6 +7,30 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="/styles.css">
+    <style>
+        /* Profile page header styling */
+        .page-header {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            border-radius: 20px;
+            padding: 30px;
+            margin-bottom: 30px;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .page-header::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            right: -50%;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 50%;
+            transform: rotate(45deg);
+        }
+    </style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -42,40 +66,66 @@
         </div>
     </div>
 </nav>
-<div class="container-fluid mt-4">
-<div id="profile-page" class="page-container">
-    <div class="row mb-4">
-        <div class="col-md-12">
-            <h2>User Profile</h2>
+<div class="container-fluid mt-4" id="profile-page">
+    <div class="page-header">
+        <h2 class="text-center mb-4"><i class="fas fa-user-circle me-2"></i>User Profile</h2>
+        <div class="row justify-content-center">
+            <div class="col-md-8 col-lg-6">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="text-center mb-4">
+                            <div class="bg-light rounded-circle d-inline-flex align-items-center justify-content-center" style="width: 80px; height: 80px;">
+                                <i class="fas fa-user fa-2x text-muted"></i>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <strong><i class="fas fa-user me-2"></i>Username:</strong>
+                            </div>
+                            <div class="col-sm-8">
+                                <span id="profile-username"></span>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <strong><i class="fas fa-envelope me-2"></i>Email:</strong>
+                            </div>
+                            <div class="col-sm-8">
+                                <span id="profile-email"></span>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <strong><i class="fas fa-calendar me-2"></i>Joined:</strong>
+                            </div>
+                            <div class="col-sm-8">
+                                <span id="profile-created"></span>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="mb-3">
+                            <label for="profile-currency" class="form-label">
+                                <strong><i class="fas fa-money-bill-wave me-2"></i>Currency</strong>
+                            </label>
+                            <select class="form-select" id="profile-currency">
+                                <option value="USD">🇺🇸 USD - US Dollar</option>
+                                <option value="EUR">🇪🇺 EUR - Euro</option>
+                                <option value="GBP">🇬🇧 GBP - British Pound</option>
+                                <option value="LKR">🇱🇰 LKR - Sri Lankan Rupee</option>
+                            </select>
+                        </div>
+                        <div class="text-end">
+                            <button type="button" class="btn btn-info" id="save-profile">
+                                <i class="fas fa-save me-1"></i>Save Changes
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-6">
-            <div class="mb-3">
-                <label class="form-label">Username:</label>
-                <span id="profile-username"></span>
-            </div>
-            <div class="mb-3">
-                <label class="form-label">Email:</label>
-                <span id="profile-email"></span>
-            </div>
-            <div class="mb-3">
-                <label class="form-label">Joined:</label>
-                <span id="profile-created"></span>
-            </div>
-            <div class="mb-3">
-                <label for="profile-currency" class="form-label">Currency</label>
-                <select class="form-select" id="profile-currency">
-                    <option value="USD">$ USD</option>
-                    <option value="EUR">€ EUR</option>
-                    <option value="GBP">£ GBP</option>
-                    <option value="LKR">Rs LKR</option>
-                </select>
-            </div>
-            <button type="button" class="btn btn-primary" id="save-profile">Save</button>
-        </div>
-    </div>
-</div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
