--- a/src/static/profile.html
+++ b/src/static/profile.html
@@ -66,10 +66,53 @@
         </div>
     </div>
 </nav>
-
-        </div>
+<!-- Main Content -->
+<div class="container mt-4" id="profile-page">
+    <div class="page-header">
+        <h2><i class="fas fa-user-circle me-2"></i>User Profile</h2>
     </div>
+    <form id="profile-form">
+        <div class="mb-3">
+            <label for="profile-username" class="form-label">
+                <i class="fas fa-user me-2"></i>Username
+            </label>
+            <input type="text" class="form-control" id="profile-username">
+        </div>
+        <div class="mb-3">
+            <label for="profile-email" class="form-label">
+                <i class="fas fa-envelope me-2"></i>Email
+            </label>
+            <input type="email" class="form-control" id="profile-email">
+        </div>
+        <div class="mb-3">
+            <label for="profile-password" class="form-label">
+                <i class="fas fa-lock me-2"></i>Password
+            </label>
+            <input type="password" class="form-control" id="profile-password" placeholder="New password">
+        </div>
+        <div class="mb-3">
+            <label for="profile-currency" class="form-label">
+                <i class="fas fa-money-bill-wave me-2"></i>Currency
+            </label>
+            <select class="form-select" id="profile-currency">
+                <option value="USD">🇺🇸 USD - US Dollar</option>
+                <option value="EUR">🇪🇺 EUR - Euro</option>
+                <option value="GBP">🇬🇧 GBP - British Pound</option>
+                <option value="LKR">🇱🇰 LKR - Sri Lankan Rupee</option>
+            </select>
+        </div>
+        <div class="mb-3">
+            <label class="form-label">
+                <i class="fas fa-calendar me-2"></i>Joined
+            </label>
+            <div id="profile-created" class="form-control-plaintext"></div>
+        </div>
+        <button type="button" class="btn btn-info" onclick="saveUserProfile()">
+            <i class="fas fa-save me-1"></i>Save Changes
+        </button>
+    </form>
 </div>
+{% include 'profile_modal.html' %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="/app.js"></script>
