--- a/src/static/profile.html
+++ b/src/static/profile.html
@@ -33,39 +33,7 @@
     </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/dashboard">
-            <i class="fas fa-wallet me-2"></i>
-            Expense Tracker
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="/dashboard">Dashboard</a></li>
-                <li class="nav-item"><a class="nav-link" href="/expenses">Expenses</a></li>
-                <li class="nav-item"><a class="nav-link" href="/incomes">Incomes</a></li>
-                <li class="nav-item"><a class="nav-link" href="/savings">Savings</a></li>
-                <li class="nav-item"><a class="nav-link" href="/budgets">Budgets</a></li>
-                <li class="nav-item"><a class="nav-link" href="/reports">Reports</a></li>
-            </ul>
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown">
-                        <i class="fas fa-user-circle me-1"></i>
-                        <span id="username-display">User</span>
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-end">
-                        <li><a class="dropdown-item" href="/profile">Profile</a></li>
-                        <li><a class="dropdown-item" href="#" id="logout-link">Logout</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+{% include 'navbar.html' %}
 <!-- Main Content -->
 <div class="container mt-4" id="profile-page">
     <div class="page-header">
