--- a/src/static/reports.html
+++ b/src/static/reports.html
@@ -438,66 +438,7 @@
     </head>
     <body>
         <!-- Navigation -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/dashboard">
-                    <i class="fas fa-wallet me-2"></i>
-                    Expense Tracker
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="/dashboard">
-                                <i class="fas fa-home me-1"></i>Dashboard
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/expenses">
-                                <i class="fas fa-receipt me-1"></i>Expenses
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/incomes">
-                                <i class="fas fa-money-bill-wave me-1"></i>Incomes
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/savings">
-                                <i class="fas fa-piggy-bank me-1"></i>Savings
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/budgets">
-                                <i class="fas fa-calculator me-1"></i>Budgets
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="/reports">
-                                <i class="fas fa-chart-bar me-1"></i>Reports
-                            </a>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown">
-                                <i class="fas fa-user-circle me-1"></i>
-                                <span id="username-display">User</span>
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-end">
-                                <li><a class="dropdown-item" href="/profile"><i class="fas fa-cog me-2"></i>Profile</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#" id="logout-link"><i class="fas fa-sign-out-alt me-2"></i>Logout</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        {% include 'navbar.html' %}
 
         <!-- Main Content -->
         <div class="container-fluid mt-4" id="reports-page">
