--- a/src/static/expenses.html
+++ b/src/static/expenses.html
@@ -754,7 +754,7 @@
         <!-- Scripts -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-        <script src="/app.js"></script>
+        <script type="module" src="/app.js"></script>
 
         <script>
             // Additional expenses-specific functionality
