--- a/src/static/incomes.html
+++ b/src/static/incomes.html
@@ -967,7 +967,7 @@
 
         <!-- Scripts -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="/app.js"></script>
+        <script type="module" src="/app.js"></script>
 
         <script>
             // Additional incomes-specific functionality
