--- a/src/static/login.html
+++ b/src/static/login.html
@@ -445,7 +445,7 @@
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="/app.js"></script>
+        <script type="module" src="/app.js"></script>
         <script>
             // Enhanced login functionality
             document.addEventListener('DOMContentLoaded', function () {
