--- a/src/static/dashboard.html
+++ b/src/static/dashboard.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Dashboard - Expense Tracker</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-        <link rel="stylesheet" href="/styles.css">
+{% extends 'base.html' %}
+{% block title %}Dashboard - Expense Tracker{% endblock %}
+{% block extra_head %}
         <style>
             /* Additional dashboard-specific styles */
             .metric-card {
@@ -142,10 +136,9 @@
                 }
             }
         </style>
-    </head>
-    <body>
+{% endblock %}
+{% block content %}
         <!-- Navigation -->
-        {% include 'navbar.html' %}
 
         <!-- Main Content -->
         <div class="container-fluid mt-4" id="dashboard-page">
@@ -637,9 +630,8 @@
         </div>
 
         <!-- Scripts -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-        <script src="/app.js"></script>
+{% endblock %}
+{% block extra_scripts %}
 
         <script>
             // Additional dashboard-specific functionality
@@ -769,5 +761,4 @@
                 }
             });
         </script>
-    </body>
-</html>
+{% endblock %}
